fix: remove database config causing startup issues

--- a/service-b-product-management/src/main/resources/aplication.properties
+++ b/service-b-product-management/src/main/resources/aplication.properties
@@ -1,5 +1,6 @@
-server.port=8082
+server.port=8081
 
-spring.application.name=product-management-service
+spring.application.name=user-management-service
 
-logging.level.com.example.productmanagement=DEBUG
+# Remove database configurations for now
+logging.level.com.example.usermanagement=INFO
