--- a/service-b-product-management/src/main/resources/application.properties
+++ b/service-b-product-management/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-server.port=8081
-spring.application.name=product-management
-spring.datasource.url=jdbc:mysql://localhost:3306/productdb
-spring.datasource.username=root
-spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+server.port=8082
+
+spring.application.name=product-management-service
+
+logging.level.com.example.productmanagement=DEBUG
