--- a/service-a-user-management/src/main/resources/application.properties
+++ b/service-a-user-management/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 server.port=8081
-spring.application.name=user-management
-spring.datasource.url=jdbc:mysql://localhost:3306/userdb
-spring.datasource.username=root
-spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.application.name=user-management-service
+# Remove database configurations for now 
+logging.level.com.example.usermanagement=INFO
+
